Refactor package organisation and apply onion architecture (#76)
- P classes are actually our internal model, therefore are moved to `io.whitefox.core`
- Services are business logic, they should not deal with auto-generated
classes and persistence classes, also they should be part of core
package
- persistence should return classes of our internal model, any detail of
persistence should be hidden
- API classes are responsible for mapping to/from request/response