@@ -1,18 +1,21 @@
 package io.whitefox.services;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import io.whitefox.api.deltasharing.encoders.DeltaPageTokenEncoder;
-import io.whitefox.api.deltasharing.loader.DeltaShareTableLoader;
-import io.whitefox.api.deltasharing.model.Schema;
-import io.whitefox.api.deltasharing.model.Share;
-import io.whitefox.api.deltasharing.model.Table;
+import io.whitefox.core.Schema;
+import io.whitefox.core.Share;
+import io.whitefox.core.Table;
+import io.whitefox.core.services.DeltaShareTableLoader;
+import io.whitefox.core.services.DeltaSharesService;
+import io.whitefox.core.services.DeltaSharesServiceImpl;
 import io.whitefox.persistence.StorageManager;
 import io.whitefox.persistence.memory.InMemoryStorageManager;
-import io.whitefox.persistence.memory.PSchema;
-import io.whitefox.persistence.memory.PShare;
-import io.whitefox.persistence.memory.PTable;
-import java.util.*;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.concurrent.ExecutionException;
 import org.hamcrest.Matchers;
 import org.junit.jupiter.api.Test;
@@ -24,29 +27,29 @@ public class DeltaShareServiceTest {
 
   @Test
   public void getUnknownShare() throws ExecutionException, InterruptedException {
-    DeltaSharesService deltaSharesService = new DeltaSharesServiceImpl(
-        new InMemoryStorageManager(), defaultMaxResults, encoder, loader);
+    DeltaSharesService deltaSharesService =
+        new DeltaSharesServiceImpl(new InMemoryStorageManager(), defaultMaxResults, loader);
     assertEquals(Optional.empty(), deltaSharesService.getShare("unknown"));
   }
 
   @Test
   public void getShare() throws ExecutionException, InterruptedException {
-    var shares = List.of(new PShare("name", "key", Collections.emptyMap()));
+    var shares = List.of(new Share("name", "key", Collections.emptyMap()));
     StorageManager storageManager = new InMemoryStorageManager(shares);
     DeltaSharesService deltaSharesService =
-        new DeltaSharesServiceImpl(storageManager, defaultMaxResults, encoder, loader);
-    Optional<Share> share = deltaSharesService.getShare("name");
+        new DeltaSharesServiceImpl(storageManager, defaultMaxResults, loader);
+    var share = deltaSharesService.getShare("name");
     assertTrue(share.isPresent());
-    assertEquals("name", share.get().getName());
-    assertEquals("key", share.get().getId());
+    assertEquals("name", share.get().name());
+    assertEquals("key", share.get().id());
   }
 
   @Test
   public void listShares() throws ExecutionException, InterruptedException {
-    var shares = List.of(new PShare("name", "key", Collections.emptyMap()));
+    var shares = List.of(new Share("name", "key", Collections.emptyMap()));
     StorageManager storageManager = new InMemoryStorageManager(shares);
     DeltaSharesService deltaSharesService =
-        new DeltaSharesServiceImpl(storageManager, defaultMaxResults, encoder, loader);
+        new DeltaSharesServiceImpl(storageManager, defaultMaxResults, loader);
     var sharesWithNextToken = deltaSharesService.listShares(Optional.empty(), Optional.of(30));
     assertEquals(1, sharesWithNextToken.getContent().size());
     assertTrue(sharesWithNextToken.getToken().isEmpty());
@@ -54,10 +57,10 @@ public class DeltaShareServiceTest {
 
   @Test
   public void listSharesWithToken() throws ExecutionException, InterruptedException {
-    var shares = List.of(new PShare("name", "key", Collections.emptyMap()));
+    var shares = List.of(new Share("name", "key", Collections.emptyMap()));
     StorageManager storageManager = new InMemoryStorageManager(shares);
     DeltaSharesService deltaSharesService =
-        new DeltaSharesServiceImpl(storageManager, defaultMaxResults, encoder, loader);
+        new DeltaSharesServiceImpl(storageManager, defaultMaxResults, loader);
     var sharesWithNextToken = deltaSharesService.listShares(Optional.empty(), Optional.of(30));
     assertEquals(1, sharesWithNextToken.getContent().size());
     assertTrue(sharesWithNextToken.getToken().isEmpty());
@@ -65,10 +68,9 @@ public class DeltaShareServiceTest {
 
   @Test
   public void listSchemasOfEmptyShare() throws ExecutionException, InterruptedException {
-    var shares = List.of(new PShare("name", "key", Collections.emptyMap()));
+    var shares = List.of(new Share("name", "key", Collections.emptyMap()));
     StorageManager storageManager = new InMemoryStorageManager(shares);
-    DeltaSharesService deltaSharesService =
-        new DeltaSharesServiceImpl(storageManager, 100, encoder, loader);
+    DeltaSharesService deltaSharesService = new DeltaSharesServiceImpl(storageManager, 100, loader);
     var resultSchemas = deltaSharesService.listSchemas("name", Optional.empty(), Optional.empty());
     assertTrue(resultSchemas.isPresent());
     assertTrue(resultSchemas.get().getContent().isEmpty());
@@ -77,27 +79,25 @@ public class DeltaShareServiceTest {
 
   @Test
   public void listSchemas() throws ExecutionException, InterruptedException {
-    var shares = List.of(new PShare(
-        "name", "key", Map.of("default", new PSchema("default", Collections.emptyList(), "name"))));
+    var shares = List.of(new Share(
+        "name", "key", Map.of("default", new Schema("default", Collections.emptyList(), "name"))));
     StorageManager storageManager = new InMemoryStorageManager(shares);
-    DeltaSharesService deltaSharesService =
-        new DeltaSharesServiceImpl(storageManager, 100, encoder, loader);
+    DeltaSharesService deltaSharesService = new DeltaSharesServiceImpl(storageManager, 100, loader);
     var resultSchemas = deltaSharesService.listSchemas("name", Optional.empty(), Optional.empty());
     assertTrue(resultSchemas.isPresent());
     assertEquals(1, resultSchemas.get().getContent().size());
     assertEquals(
-        new Schema().share("name").name("default"),
+        new Schema("default", Collections.emptyList(), "name"),
         resultSchemas.get().getContent().get(0));
     assertTrue(resultSchemas.get().getToken().isEmpty());
   }
 
   @Test
   public void listSchemasOfUnknownShare() throws ExecutionException, InterruptedException {
-    var shares = List.of(new PShare(
-        "name", "key", Map.of("default", new PSchema("default", Collections.emptyList(), "name"))));
+    var shares = List.of(new Share(
+        "name", "key", Map.of("default", new Schema("default", Collections.emptyList(), "name"))));
     StorageManager storageManager = new InMemoryStorageManager(shares);
-    DeltaSharesService deltaSharesService =
-        new DeltaSharesServiceImpl(storageManager, 100, encoder, loader);
+    DeltaSharesService deltaSharesService = new DeltaSharesServiceImpl(storageManager, 100, loader);
     var resultSchemas =
         deltaSharesService.listSchemas("notKey", Optional.empty(), Optional.empty());
     assertTrue(resultSchemas.isEmpty());
@@ -105,74 +105,75 @@ public class DeltaShareServiceTest {
 
   @Test
   public void listTables() throws ExecutionException, InterruptedException {
-    var shares = List.of(new PShare(
+    var shares = List.of(new Share(
         "name",
         "key",
         Map.of(
             "default",
-            new PSchema(
-                "default",
-                List.of(new PTable("table1", "location1", "default", "name")),
-                "name"))));
+            new Schema(
+                "default", List.of(new Table("table1", "location1", "default", "name")), "name"))));
     StorageManager storageManager = new InMemoryStorageManager(shares);
-    DeltaSharesService deltaSharesService =
-        new DeltaSharesServiceImpl(storageManager, 100, encoder, loader);
+    DeltaSharesService deltaSharesService = new DeltaSharesServiceImpl(storageManager, 100, loader);
     var resultSchemas =
         deltaSharesService.listTables("name", "default", Optional.empty(), Optional.empty());
     assertTrue(resultSchemas.isPresent());
     assertTrue(resultSchemas.get().getToken().isEmpty());
     assertEquals(1, resultSchemas.get().getContent().size());
     assertEquals(
-        new Table().name("table1").schema("default").share("name"),
+        new Table("table1", "location1", "default", "name"),
         resultSchemas.get().getContent().get(0));
   }
 
   @Test
   public void listAllTables() throws ExecutionException, InterruptedException {
-    var shares = List.of(new PShare(
+    var shares = List.of(new Share(
         "name",
         "key",
         Map.of(
             "default",
-            new PSchema(
-                "default", List.of(new PTable("table1", "location1", "default", "name")), "name"),
+            new Schema(
+                "default", List.of(new Table("table1", "location1", "default", "name")), "name"),
             "other",
-            new PSchema(
-                "other", List.of(new PTable("table2", "location2", "default", "name")), "name"))));
+            new Schema(
+                "other", List.of(new Table("table2", "location2", "default", "name")), "name"))));
     StorageManager storageManager = new InMemoryStorageManager(shares);
-    DeltaSharesService deltaSharesService =
-        new DeltaSharesServiceImpl(storageManager, 100, encoder, loader);
+    DeltaSharesService deltaSharesService = new DeltaSharesServiceImpl(storageManager, 100, loader);
     var resultSchemas =
         deltaSharesService.listTablesOfShare("name", Optional.empty(), Optional.empty());
     assertTrue(resultSchemas.isPresent());
     assertTrue(resultSchemas.get().getToken().isEmpty());
     Matchers.containsInAnyOrder(List.of(
-            new Table().name("table2").schema("other").share("name"),
-            new Table().name("table1").schema("default").share("name")))
+            new io.whitefox.api.deltasharing.model.Table()
+                .name("table2")
+                .schema("other")
+                .share("name"),
+            new io.whitefox.api.deltasharing.model.Table()
+                .name("table1")
+                .schema("default")
+                .share("name")))
         .matches(resultSchemas.get().getContent());
   }
 
   @Test
   public void listAllTablesEmpty() throws ExecutionException, InterruptedException {
     var shares = List.of(
-        new PShare(
+        new Share(
             "name",
             "key",
             Map.of(
                 "default",
-                new PSchema(
+                new Schema(
                     "default",
-                    List.of(new PTable("table1", "location1", "default", "name")),
+                    List.of(new Table("table1", "location1", "default", "name")),
                     "name"),
                 "other",
-                new PSchema(
+                new Schema(
                     "other",
-                    List.of(new PTable("table2", "location2", "default", "name")),
+                    List.of(new Table("table2", "location2", "default", "name")),
                     "name"))),
-        new PShare("name2", "key2", Map.of()));
+        new Share("name2", "key2", Map.of()));
     StorageManager storageManager = new InMemoryStorageManager(shares);
-    DeltaSharesService deltaSharesService =
-        new DeltaSharesServiceImpl(storageManager, 100, encoder, loader);
+    DeltaSharesService deltaSharesService = new DeltaSharesServiceImpl(storageManager, 100, loader);
     var resultSchemas =
         deltaSharesService.listTablesOfShare("name2", Optional.empty(), Optional.empty());
     assertTrue(resultSchemas.isPresent());
@@ -183,8 +184,7 @@ public class DeltaShareServiceTest {
   @Test
   public void listAllTablesNoShare() throws ExecutionException, InterruptedException {
     StorageManager storageManager = new InMemoryStorageManager();
-    DeltaSharesService deltaSharesService =
-        new DeltaSharesServiceImpl(storageManager, 100, encoder, loader);
+    DeltaSharesService deltaSharesService = new DeltaSharesServiceImpl(storageManager, 100, loader);
     var resultSchemas =
         deltaSharesService.listTablesOfShare("name2", Optional.empty(), Optional.empty());
     assertTrue(resultSchemas.isEmpty());
